--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
 
-<style></style>
-
 <main class="main">
   <div class="content">
     <div>
       <h1>Картинная галерея</h1>
-      <router-outlet></router-outlet>
+      <app-gallery/>
+      <h2>Картинная галерея</h2>
+      <app-artwork/>
+      <h3>Картинная галерея</h3>
+      <app-artwork-detail/>
+
     </div>
   </div>
 </main>
